--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,11 @@
 				<version>1.9.13</version>
 			</dependency>
 			<dependency>
+				<groupId>com.thoughtworks.xstream</groupId>
+				<artifactId>xstream</artifactId>
+				<version>1.4.7</version>
+			</dependency>
+			<dependency>
 				<groupId>junit</groupId>
 				<artifactId>junit</artifactId>
 				<version>4.11</version>
