--- a/steed-common/pom.xml
+++ b/steed-common/pom.xml
@@ -22,6 +22,10 @@
 			<artifactId>xstream</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>com.belerweb</groupId>
+			<artifactId>pinyin4j</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<scope>test</scope>
