--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,11 @@
 				<version>1.4.7</version>
 			</dependency>
 			<dependency>
+				<groupId>com.belerweb</groupId>
+				<artifactId>pinyin4j</artifactId>
+				<version>2.5.0</version>
+			</dependency>
+			<dependency>
 				<groupId>junit</groupId>
 				<artifactId>junit</artifactId>
 				<version>4.11</version>
