--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,13 @@
 				<version>1</version>
 			</dependency>
 
+			<!-- apache -->
+			<dependency>
+				<groupId>org.apache.httpcomponents</groupId>
+				<artifactId>httpclient</artifactId>
+				<version>4.3.1</version>
+			</dependency>
+
 			<!-- utils -->
 			<dependency>
 				<groupId>com.google.guava</groupId>
