--- a/steed-common/pom.xml
+++ b/steed-common/pom.xml
@@ -26,6 +26,10 @@
 			<artifactId>pinyin4j</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			</dependency>
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<scope>test</scope>
