--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,18 @@
 				<version>4.3.1</version>
 			</dependency>
 
+			<!-- quartz -->
+			<dependency>
+				<groupId>org.quartz-scheduler</groupId>
+				<artifactId>quartz</artifactId>
+				<version>2.2.1</version>
+			</dependency>
+			<dependency>
+				<groupId>org.quartz-scheduler</groupId>
+				<artifactId>quartz-jobs</artifactId>
+				<version>2.2.1</version>
+			</dependency>
+			
 			<!-- utils -->
 			<dependency>
 				<groupId>com.google.guava</groupId>
