--- a/common/pom.xml
+++ b/common/pom.xml
@@ -6,7 +6,7 @@
 		<artifactId>parent</artifactId>
 		<version>1.0</version>
 	</parent>
-	<artifactId>steed-common</artifactId>
+	<artifactId>common</artifactId>
 
 	<dependencies>
 		<dependency>
