--- a/common/pom.xml
+++ b/common/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.mdeng</groupId>
 		<artifactId>parent</artifactId>
-		<version>1.0</version>
+		<version>1.0.0-SNAPSHOT</version>
 	</parent>
 	<artifactId>common</artifactId>
 
