--- a/note/pom.xml
+++ b/note/pom.xml
@@ -6,12 +6,6 @@
 		<artifactId>parent</artifactId>
 		<version>1.0.0-SNAPSHOT</version>
 	</parent>
-	<artifactId>quiz</artifactId>
-
-	<dependencies>
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-		</dependency>
-	</dependencies>
+	<artifactId>note</artifactId>
+	<packaging>war</packaging>
 </project>
