--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,12 @@
 
 	<dependencyManagement>
 		<dependencies>
+			<dependency>
+				<groupId>log4j</groupId>
+				<artifactId>log4j</artifactId>
+				<version>1.2.16</version>
+			</dependency>
+		
 			<!-- spring -->
 			<dependency>
 				<groupId>org.springframework</groupId>
