--- a/serank/src/main/resources/serank.properties
+++ b/serank/src/main/resources/serank.properties
@@ -1,2 +1,8 @@
 serank.thread.count=5
 serank.proxy.enabled=false
+
+#single: single time
+#rate: fixed rate
+serank.executor.strategy=single
+#frequency in seconds to execute at fixed rate
+serank.executor.frequency=0
