--- a/serank/src/main/resources/serank.properties
+++ b/serank/src/main/resources/serank.properties
@@ -6,3 +6,5 @@ serank.proxy.enabled=false
 serank.executor.strategy=single
 #frequency in seconds to execute at fixed rate
 serank.executor.frequency=0
+
+serank.keyword.dir=keyword
