--- a/serank/src/main/resources/serank.properties
+++ b/serank/src/main/resources/serank.properties
@@ -1,6 +1,6 @@
 serank.thread.count=5
 serank.proxy.enabled=false
-
+serank.spider.top=10
 #single: single time
 #rate: fixed rate
 serank.executor.strategy=single
