--- a/serank/src/main/resources/serank.properties
+++ b/serank/src/main/resources/serank.properties
@@ -1,5 +1,5 @@
 serank.thread.count=5
-serank.proxy.enabled=false
+serank.proxy.enabled=true
 serank.spider.top=10
 #single: single time
 #rate: fixed rate
