--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
 				<artifactId>slf4j-api</artifactId>
 				<version>1.7.12</version>
 			</dependency>
-			<dependency> 
+			<dependency>
 				<groupId>org.slf4j</groupId>
 				<artifactId>slf4j-log4j12</artifactId>
 				<version>1.7.12</version>
@@ -30,6 +30,11 @@
 				<scope>provided</scope>
 			</dependency>
 
+			<dependency>
+				<groupId>org.apache.commons</groupId>
+				<artifactId>commons-lang3</artifactId>
+				<version>3.4</version>
+			</dependency>
 			<!-- spring -->
 			<dependency>
 				<groupId>org.springframework</groupId>
@@ -125,32 +130,32 @@
 				<version>2.2.1</version>
 			</dependency>
 
-			<dependency>  
-				<groupId>org.apache.mrunit</groupId>  
-				<artifactId>mrunit</artifactId>  
+			<dependency>
+				<groupId>org.apache.mrunit</groupId>
+				<artifactId>mrunit</artifactId>
 				<version>0.9.0-incubating</version>
-				<classifier>hadoop2</classifier> 
+				<classifier>hadoop2</classifier>
 				<scope>test</scope>
 			</dependency>
-			<dependency>  
-				<groupId>org.apache.hadoop</groupId>  
-				<artifactId>hadoop-core</artifactId>  
-				<version>1.2.0</version>  
+			<dependency>
+				<groupId>org.apache.hadoop</groupId>
+				<artifactId>hadoop-core</artifactId>
+				<version>1.2.0</version>
 			</dependency>
-			<dependency>  
-				<groupId>org.apache.hadoop</groupId>  
-				<artifactId>hadoop-common</artifactId>  
-				<version>${hadoop.version}</version>  
-			</dependency>  
-			<dependency>  
-				<groupId>org.apache.hadoop</groupId>  
-				<artifactId>hadoop-hdfs</artifactId>  
-				<version>${hadoop.version}</version>  
-			</dependency>  
-			<dependency>  
-				<groupId>org.apache.hadoop</groupId>  
-				<artifactId>hadoop-client</artifactId>  
-				<version>${hadoop.version}</version>  
+			<dependency>
+				<groupId>org.apache.hadoop</groupId>
+				<artifactId>hadoop-common</artifactId>
+				<version>${hadoop.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.hadoop</groupId>
+				<artifactId>hadoop-hdfs</artifactId>
+				<version>${hadoop.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.hadoop</groupId>
+				<artifactId>hadoop-client</artifactId>
+				<version>${hadoop.version}</version>
 			</dependency> 
 			<!-- utils -->
 			<dependency>
